# rust-nes-emulator

./: .gitignore  Cargo.toml  README.md  todo.md
src/: bus.rs  debug.rs  main.rs  nes.rs  pad.rs
src/cartridge/: cartridge.rs  load_file.rs  memory_access.rs  mod.rs  types.rs
src/cpu/: addres_mode.rs  cpu6502.rs  external_inputs.rs  helpers.rs  instruction.rs  mod.rs  opcode.rs
src/custom_game/: mod.rs  snake_game.rs
src/custom_game/snake_game/: code.rs  mod.rs
src/mapper/: mapper.rs  mod.rs
src/mapper/mappers/: mapper_000.rs  mod.rs
src/ppu/: clock.rs  clock_helpers.rs  memory_access.rs  mod.rs  output.rs  pixel.rs  ppu2C02.rs  registers.rs  screen.rs  types.rs
src/video/: debug.rs  frame.rs  mod.rs  pixel.rs  utils.rs  video.rs
test/: file_test.txt
