[package]
name = "rust-nes-emulator"
version = "0.1.0"
authors = ["Raina Pepe <raina.pepe@jbtec.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
pistoncore-glutin_window = "0.69.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"